utilities/radicale/radicale/templates/14-redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        imagePullPolicy: IfNotPresent
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        volumeMounts:
        - name: redisconfig
          mountPath: /var/lib/redis
          readOnly: false
      restartPolicy: Always
      volumes:
      - name: redisconfig
        persistentVolumeClaim:
          claimName: redis-config-pvc
