utilities/radicale/radicale/templates/15-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis
spec:
  type: NodePort
  ports:
  - name: redis
    targetPort: 6379
    port: 6379
    nodePort: 30379
  selector:
    app: redis
