utilities/radicale/radicale/templates/21-local-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry
        ports:
        - containerPort: 32000
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry
      volumes:
      - name: storage
        emptyDir: {} # TODO -make this more permanent later
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: docker-registry
  name: docker-registry
  namespace: docker-registry
spec:
  ports:
  - port: 32000
    protocol: TCP
    nodePort: 32000
    targetPort: 32000
  selector:
    app: docker-registry
  type: NodePort
status:
  loadBalancer: {}
---
