utilities/radicale/radicale/templates/06-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radicale
  namespace: radicale
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  name: dav
